NM-2909 Added empty result sets messages to user profile. See more text now has correct letter spacing

--- a/app/assets/stylesheets/intel/modules/_tabs.scss
+++ b/app/assets/stylesheets/intel/modules/_tabs.scss
@@ -66,6 +66,7 @@
 .tab-content {
   > .tab-pane {
     display: none;
+    margin-bottom: 0;
   }
 
   > .active {
